--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,11 @@ services:
       - "6222:5432"
     volumes:
       - "nexus_pgdata:/var/lib/postgresql/data"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U adminUsr -d NexusPMDB"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
   
   redis:
     image: redis:8.2
@@ -21,14 +26,19 @@ services:
   web:
     build: ./Project_Manager
     command: >
-      sh -c "python manage.py makemigrations && python manage.py migrate && python manage.py loaddata colors_fixture.json && python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py makemigrations && 
+             python manage.py migrate && 
+             python manage.py loaddata colors_fixture.json && 
+             python manage.py runserver 0.0.0.0:8000"
     ports:
       - "8000:8000"
     volumes:
       - ./Project_Manager:/app
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
 
   celery:
     build: ./Project_Manager
